--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   keycloak:
     image: jboss/keycloak:latest
+    container_name: "keycloak"
     environment:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
@@ -18,15 +19,58 @@ services:
       - keycloak-db
     volumes:
       - ./iam-keycloak-poc-realm.json:/opt/jboss/keycloak/iam-keycloak-poc-realm.json
+    networks:
+      - myproject
+
+  iam-app:
+    image: "postoronnik/iam-app:v7"
+    container_name: "iam-app"
+    ports:
+      - "8081:8081"
+    environment:
+      - KEYCLOAK_JWK_SET_URI=http://keycloak:8080/auth/realms/iam-keycloak-poc/protocol/openid-connect/certs
+      - JDBC_URL=jdbc:postgresql://db/app
+      - DB_USERNAME=admin
+      - DB_PASSWORD=admin
+    depends_on:
+      - app-db
+      - keycloak
+    networks:
+      - myproject
+    links:
+      - keycloak
 
   keycloak-db:
     image: postgres:latest
+    expose:
+      - "5432"
     environment:
       - POSTGRES_DB=keycloak
       - POSTGRES_USER=keycloak
       - POSTGRES_PASSWORD=keycloak
     volumes:
       - keycloak-db-data:/var/lib/postgresql/data
+    networks:
+      - myproject
+
+  app-db:
+    image: postgres:latest
+    container_name: "db"
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+    volumes:
+      - app-db-data:/var/lib/postgresql/app/data
+    networks:
+      - myproject
 
 volumes:
   keycloak-db-data:
+  app-db-data:
+
+networks:
+  myproject:
+    driver: bridge
