--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,10 +12,13 @@ services:
       - DB_PORT=5432
       - DB_USER=keycloak
       - DB_PASSWORD=keycloak
+      - KEYCLOAK_IMPORT=/opt/jboss/keycloak/iam-keycloak-poc-realm.json
     ports:
       - "8080:8080"
     depends_on:
       - keycloak-db
+    volumes:
+      - ./iam-keycloak-poc-realm.json:/opt/jboss/keycloak/iam-keycloak-poc-realm.json
     networks:
       - myproject
 
