--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
     ports:
       - "8081:8081"
     environment:
+      - KEYCLOAK_JWK_SET_URI=http://keycloak:8080/auth/realms/iam-keycloak-poc/protocol/openid-connect/certs
       - JDBC_URL=jdbc:postgresql://db/app
       - DB_USERNAME=admin
       - DB_PASSWORD=admin
